<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<View
		android:layout_width="0px"
		android:layout_height="0px"
		android:focusable="true"
		android:focusableInTouchMode="true" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/bg_open_kitchen"
		tools:ignore="ContentDescription" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/labelName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/name"
		android:labelFor="@id/editName"
		app:layout_constraintBottom_toTopOf="@+id/labelEmail"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"
		app:layout_constraintVertical_chainStyle="packed">

		<EditText
			android:id="@+id/editName"
			style="@style/Widget.AppCompat.EditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:autofillHints="name"
			android:ems="15"
			android:inputType="textPersonName|textCapWords"
			android:nextFocusForward="@id/editEmail"
			tools:ignore="UnusedAttribute" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/labelEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/email"
		android:labelFor="@id/editEmail"
		app:layout_constraintBottom_toTopOf="@+id/labelServer"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/labelName">

		<EditText
			android:id="@+id/editEmail"
			style="@style/Widget.AppCompat.EditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:autofillHints="email"
			android:ems="15"
			android:imeOptions="actionGo"
			android:inputType="textEmailAddress"
			android:nextFocusForward="@id/editServer"
			tools:ignore="UnusedAttribute" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/labelServer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/server_url"
		android:labelFor="@id/editServer"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/startButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/labelEmail">

		<EditText
			android:id="@+id/editServer"
			style="@style/Widget.AppCompat.EditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:ems="15"
			android:imeOptions="actionGo"
			android:importantForAutofill="no"
			android:inputType="textUri"
			tools:ignore="UnusedAttribute" />
	</com.google.android.material.textfield.TextInputLayout>


	<Button
		android:id="@+id/startButton"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:text="@string/start"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/labelServer" />
</androidx.constraintlayout.widget.ConstraintLayout>